# Author: Lucas Vilas-Boas
# Year: 2025
# Repo: https://github.com/lucoiso/luvk

SET(LIBRARY_NAME luvk)

CMAKE_MINIMUM_REQUIRED(VERSION 3.28)
PROJECT(${LIBRARY_NAME} VERSION 0.0.1 LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

IF (POLICY CMP0048)
    CMAKE_POLICY(SET CMP0048 NEW)
ENDIF ()

SET(${LIBRARY_NAME}_SOURCE_BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET(${LIBRARY_NAME}_INCLUDE_BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/)

FILE(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS "${${LIBRARY_NAME}_SOURCE_BASE_DIRECTORY}/*.cpp")
FILE(GLOB_RECURSE HEADER_FILES CONFIGURE_DEPENDS "${${LIBRARY_NAME}_INCLUDE_BASE_DIRECTORY}/${LIBRARY_NAME}/**/*.hpp")

ADD_LIBRARY(${LIBRARY_NAME} SHARED ${SOURCE_FILES})
SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES LINKER_LANGUAGE CXX)

TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PRIVATE ${${LIBRARY_NAME}_SOURCE_BASE_DIRECTORY})
TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC ${${LIBRARY_NAME}_INCLUDE_BASE_DIRECTORY})

TARGET_COMPILE_DEFINITIONS(${LIBRARY_NAME} PRIVATE BUILD_DLL)

IF (WIN32)
    TARGET_COMPILE_DEFINITIONS(${LIBRARY_NAME} PUBLIC VK_USE_PLATFORM_WIN32_KHR)
    TARGET_COMPILE_DEFINITIONS(${LIBRARY_NAME} PUBLIC NOMINMAX)
ELSEIF (MACOS)
    TARGET_COMPILE_DEFINITIONS(${LIBRARY_NAME} PUBLIC VK_USE_PLATFORM_MACOS_MVK)
    TARGET_COMPILE_OPTIONS(${LIBRARY_NAME} PUBLIC -fexperimental-library)
ELSEIF (UNIX)
    TARGET_COMPILE_DEFINITIONS(${LIBRARY_NAME} PUBLIC VK_USE_PLATFORM_XCB_KHR)
ENDIF (WIN32)

TARGET_COMPILE_DEFINITIONS(${LIBRARY_NAME} PUBLIC VK_NO_PROTOTYPES=1)
TARGET_COMPILE_DEFINITIONS(${LIBRARY_NAME} PUBLIC VMA_STATIC_VULKAN_FUNCTIONS=0)
TARGET_COMPILE_DEFINITIONS(${LIBRARY_NAME} PUBLIC VMA_DYNAMIC_VULKAN_FUNCTIONS=1)

INCLUDE(FetchContent)

SET(VULKAN_HEADERS_ENABLE_TESTS OFF CACHE BOOL "" FORCE)
SET(VULKAN_HEADERS_ENABLE_INSTALL OFF CACHE BOOL "" FORCE)
SET(VULKAN_HEADERS_ENABLE_MODULE OFF CACHE BOOL "" FORCE)

FETCHCONTENT_DECLARE(vulkan
                     GIT_REPOSITORY https://github.com/KhronosGroup/Vulkan-Headers.git
                     GIT_TAG v1.4.335
)
FETCHCONTENT_MAKEAVAILABLE(vulkan)

SET(VOLK_HEADERS_ONLY OFF CACHE BOOL "" FORCE)
SET(VOLK_INSTALL OFF CACHE BOOL "" FORCE)
SET(VOLK_PULL_IN_VULKAN OFF CACHE BOOL "" FORCE)
SET(VOLK_NAMESPACE OFF CACHE BOOL "" FORCE)

FETCHCONTENT_DECLARE(volk
                     GIT_REPOSITORY https://github.com/zeux/volk.git
                     GIT_TAG 34d6fff593000645e6a0415a888198767c288842
)
FETCHCONTENT_MAKEAVAILABLE(volk)

TARGET_SOURCES(${LIBRARY_NAME} PRIVATE ${volk_SOURCE_DIR}/volk.c)
TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC ${volk_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(volk PUBLIC ${vulkan_SOURCE_DIR}/include)

SET(SLANG_LIB_TYPE SHARED CACHE STRING "" FORCE)
SET(SLANG_ENABLE_CUDA OFF CACHE BOOL "" FORCE)
SET(SLANG_ENABLE_TESTS OFF CACHE BOOL "" FORCE)
SET(SLANG_ENABLE_NVAPI OFF CACHE BOOL "" FORCE)
SET(SLANG_ENABLE_AFTERMATH OFF CACHE BOOL "" FORCE)
SET(SLANG_ENABLE_DX_ON_VK OFF CACHE BOOL "" FORCE)
SET(SLANG_EMBED_CORE_MODULE_SOURCE ON CACHE BOOL "" FORCE)
SET(SLANG_EMBED_CORE_MODULE OFF CACHE BOOL "" FORCE)
SET(SLANG_ENABLE_SLANG_RHI OFF CACHE BOOL "" FORCE)
SET(SLANG_ENABLE_DXIL OFF CACHE BOOL "" FORCE)
SET(SLANG_ENABLE_FULL_IR_VALIDATION  OFF CACHE BOOL "" FORCE)
SET(SLANG_ENABLE_IR_BREAK_ALLOC OFF CACHE BOOL "" FORCE)
SET(SLANG_ENABLE_ASAN OFF CACHE BOOL "" FORCE)
SET(SLANG_ENABLE_COVERAGE OFF CACHE BOOL "" FORCE)
SET(SLANG_ENABLE_PREBUILT_BINARIES ON CACHE BOOL "" FORCE)
SET(SLANG_ENABLE_GFX OFF CACHE BOOL "" FORCE)
SET(SLANG_ENABLE_SLANGD OFF CACHE BOOL "" FORCE)
SET(SLANG_ENABLE_SLANGC ON CACHE BOOL "" FORCE)
SET(SLANG_ENABLE_SLANGI OFF CACHE BOOL "" FORCE)
SET(SLANG_ENABLE_SLANGRT OFF CACHE BOOL "" FORCE)
SET(SLANG_ENABLE_SLANG_GLSLANG OFF CACHE BOOL "" FORCE)
SET(SLANG_ENABLE_EXAMPLES OFF CACHE BOOL "" FORCE)
SET(SLANG_ENABLE_REPLAYER OFF CACHE BOOL "" FORCE)
SET(SLANG_GITHUB_TOKEN OFF CACHE BOOL "" FORCE)
SET(SLANG_USE_SYSTEM_MINIZ OFF CACHE BOOL "" FORCE)
SET(SLANG_USE_SYSTEM_LZ4 OFF CACHE BOOL "" FORCE)
SET(SLANG_USE_SYSTEM_VULKAN_HEADERS OFF CACHE BOOL "" FORCE)
SET(SLANG_USE_SYSTEM_SPIRV_HEADERS OFF CACHE BOOL "" FORCE)
SET(SLANG_USE_SYSTEM_UNORDERED_DENSE OFF CACHE BOOL "" FORCE)
SET(SLANG_USE_SYSTEM_SPIRV_TOOLS OFF CACHE BOOL "" FORCE)
SET(SLANG_USE_SYSTEM_GLSLANG OFF CACHE BOOL "" FORCE)
SET(SLANG_ENABLE_SPIRV_TOOLS_MIMALLOC OFF CACHE BOOL "" FORCE)
SET(SLANG_ENABLE_RELEASE_DEBUG_INFO OFF CACHE BOOL "" FORCE)
SET(SLANG_ENABLE_RELEASE_LTO OFF CACHE BOOL "" FORCE)
SET(SLANG_ENABLE_SPLIT_DEBUG_INFO OFF CACHE BOOL "" FORCE)
SET(SLANG_SLANG_LLVM_FLAVOR DISABLE CACHE STRING "" FORCE)
SET(SLANG_OVERRIDE_LZ4_PATH OFF CACHE BOOL "" FORCE)
SET(SLANG_OVERRIDE_MINIZ_PATH OFF CACHE BOOL "" FORCE)
SET(SLANG_OVERRIDE_UNORDERED_DENSE_PATH OFF CACHE BOOL "" FORCE)
SET(SLANG_OVERRIDE_VULKAN_HEADERS_PATH OFF CACHE BOOL "" FORCE)
SET(SLANG_OVERRIDE_SPIRV_HEADERS_PATH OFF CACHE BOOL "" FORCE)
SET(SLANG_OVERRIDE_SPIRV_TOOLS_PATH OFF CACHE BOOL "" FORCE)
SET(SLANG_OVERRIDE_GLSLANG_PATH OFF CACHE BOOL "" FORCE)
SET(SLANG_OVERRIDE_GLM_PATH OFF CACHE BOOL "" FORCE)
SET(SLANG_OVERRIDE_IMGUI_PATH OFF CACHE BOOL "" FORCE)
SET(SLANG_OVERRIDE_SLANG_RHI_PATH OFF CACHE BOOL "" FORCE)
SET(SLANG_OVERRIDE_TINYOBJLOADER_PATH OFF CACHE BOOL "" FORCE)
SET(SLANG_OVERRIDE_LUA_PATH OFF CACHE BOOL "" FORCE)
SET(SLANG_OVERRIDE_MIMALLOC_PATH OFF CACHE BOOL "" FORCE)
SET(SLANG_EXCLUDE_DAWN ON CACHE BOOL "" FORCE)
SET(SLANG_EXCLUDE_TINT ON CACHE BOOL "" FORCE)

INCLUDE(cmake/FetchSlang.cmake)
FETCH_SLANG(VERSION 2024.14.4 COMPONENTS slang)

TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC ${slang_SOURCE_DIR}/include)

SET(VMA_ENABLE_INSTALL OFF)
SET(VMA_BUILD_DOCUMENTATION OFF)
SET(VMA_BUILD_SAMPLES OFF)

FETCHCONTENT_DECLARE(vma
                     GIT_REPOSITORY https://github.com/GPUOpen-LibrariesAndSDKs/VulkanMemoryAllocator.git
                     GIT_TAG v3.3.0
)
FETCHCONTENT_MAKEAVAILABLE(vma)

TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC ${vma_SOURCE_DIR}/include)
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} PUBLIC volk slang)

INSTALL(FILES $<TARGET_RUNTIME_DLLS:${LIBRARY_NAME}> TYPE BIN)