# Author: Lucas Vilas-Boas
# Year: 2025
# Repo: https://github.com/lucoiso/luvk

SET(LIBRARY_NAME luvk)

OPTION(LUVK_INCLUDE_SLANG_COMPILER OFF)

SET(${LIBRARY_NAME}_SOURCE_BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET(${LIBRARY_NAME}_INCLUDE_BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/)

FILE(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS "${${LIBRARY_NAME}_SOURCE_BASE_DIRECTORY}/*.cpp")
FILE(GLOB_RECURSE HEADER_FILES CONFIGURE_DEPENDS "${${LIBRARY_NAME}_INCLUDE_BASE_DIRECTORY}/${LIBRARY_NAME}/**/*.hpp")

ADD_LIBRARY(${LIBRARY_NAME} ${SOURCE_FILES})
SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES LINKER_LANGUAGE CXX)

TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PRIVATE ${${LIBRARY_NAME}_SOURCE_BASE_DIRECTORY})
TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC ${${LIBRARY_NAME}_INCLUDE_BASE_DIRECTORY})

IF (WIN32)
    TARGET_COMPILE_DEFINITIONS(${LIBRARY_NAME} PUBLIC NOMINMAX)
ELSEIF (MACOS)
    TARGET_COMPILE_OPTIONS(${LIBRARY_NAME} PUBLIC -fexperimental-library)
ENDIF ()

ADD_SUBDIRECTORY(cmake)
LUVK_DEFINE_MODULE_API(${LIBRARY_NAME})

INSTALL(TARGETS ${LIBRARY_NAME}
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib
)